# nlp-from-scratch

./: .gitignore  .pylintrc  pre_train.sh  pyproject.toml
.github/workflows/: python-ci.yml
data/: dummy_corpus.json
scripts/: compute_tokens_frequency.py  prepare_chunks.py  train_mlm.py  train_tokenizer.py
src/nlp_from_scratch/: constants.py  dataset.py  model.py  utils.py
src/nlp_from_scratch/pre_training/: dataset.py  model.py  pre_trainer.py  training_params.py
src/nlp_from_scratch/tokenizer/: tokenizer_trainer.py  tokenizer_utils.py
